# LiDAR2BIM-Registration

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cmake/: cgal.cmake  glog.cmake  pybind11.CMakeLists.txt.in
configs/interval/15m/1F/: 1f_office_03.yaml
configs/interval/15m/2F/: 2f_office_01.yaml  2f_office_02.yaml  2f_office_03.yaml  building_day.yaml  office.yaml
configs/interval/15m/3F/: 3f_office_02.yaml
configs/interval/15m/4F/: 4f_office_02.yaml
configs/interval/15m/5F/: 5f_office_02.yaml
configs/interval/30m/1F/: 1f_office_03.yaml
configs/interval/30m/2F/: 2f_office_01.yaml  2f_office_02.yaml  2f_office_03.yaml  office.yaml
configs/interval/30m/3F/: 3f_office_02.yaml
configs/interval/30m/4F/: 4f_office_02.yaml
configs/interval/30m/5F/: 5f_office_02.yaml
configs/pointsam/frame/: 2f_office_01.yaml  2f_office_02.yaml  2f_office_03.yaml  building_day.yaml
configs/pointsam/frame/1F/: 1f_office_03.yaml
configs/pointsam/frame/3F/: 3f_office_01.yaml  3f_office_02.yaml  3f_office_03.yaml
docs/: benchmark.md  demo.md  install.md  prepare.md
examples/cpp/: demo_reg.cpp  reg_bm.cpp
examples/python/data_process/: make_benchmarks.py  submap3d_generator.py
examples/scripts/: benchmark.sh
include/backend/: reglib.h
include/backend/hough/: hough_voting.h  pose_2d.h  verification.h
include/frontend/feature/: descriptor.h  match.h
include/frontend/geometry/: bim.h  corner.h  lineseg.h  pc2img.h  point_cloud.h  submap.h
include/global_definition/: global_definition.h.in
include/utils/: analysis.h  cfg.h  cloud_dist.h  clustering_utils.h  file_io.h  raster_utils.h  utils.h
src/backend/: reglib.cpp
src/backend/hough/: hough_voting.cpp  pose_2d.cpp  verification.cpp
src/frontend/feature/: descriptor.cpp  match.cpp
src/frontend/geometry/: bim.cpp  corner.cpp  lineseg.cpp  point_cloud.cpp  submap.cpp
src/utils/: cfg.cpp  clustering_utils.cpp  file_io.cpp  raster_utils.cpp  utils.cpp
(+30 files in other folders)
